--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/emilioJUA23/mana-app-server#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "mongodb": "^3.1.8"
+    "mongodb": "^3.1.8",
+    "redis": "^2.8.0"
   }
 }
